src/components/Team/Contributor.css
@import url('https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap');

.profile {
  border-radius: 50%;
  height: 200px;
    width: 200px;
  margin-bottom: 10px;
  transition: all 0.3s ease-in-out;
  @media screen and (max-width: 768px) {
    height: 150px;
  }
}

.profile:hover {
    /* box-shadow: 0 0 11px purple, 0 0 11px rgba(102, 204, 255, 0.8); */
    border: 3.2px dotted black;
    transform: scale(1.1);
    transition: all 0.3s ease-in-out;
}

.card {
  margin: 20px;
  padding: 15px;
  cursor: pointer;
  background-color: transparent;
  border: none;
}

.content {
  text-align: center;
  align-items: center;
  justify-content: center;
}

.text {
  font-weight: 700;
  font-size: large;
}
.con_container{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    width: 100%;
    max-width: 1200px;
    padding: 0 10px;
}

.heading{
    /* font-family: 'Baloo Bhai 2', cursive; */
    font-size: 2.5rem;
    text-align: center;
    margin-top: 70px;
    padding: 20px 0;
    color: black;
    /* text-shadow: 0 0 11px rgba(102, 204, 255, 0.8); */
    text-transform: uppercase;
    /* letter-spacing: 2px; */
    font-weight: 700;
    @media screen and (max-width: 768px) {
        font-size: 2rem;
    }
}

